# mnm

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  NEXT-SESSION.md  README.md  RELEASE-NOTES-B2B.md  ROADMAP-B2B-REMAINING.md  bash.exe.stackdump  docker-compose.dev.yml  docker-compose.dokploy.yml  docker-compose.quickstart.yml  docker-compose.test.yml  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml
_legacy/: Cargo.toml
_legacy/src/: main.rs
_legacy/src/agents/: mod.rs
_legacy/src/sync/: mod.rs
_legacy/src/workflow/: mod.rs
_legacy/web/: .gitignore  Dockerfile  docker-compose.yml  drizzle.config.ts  next.config.ts  package.json  vitest.config.ts
_legacy/web/drizzle/migrations/: 0001_new_whiplash.sql
_legacy/web/drizzle/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
_legacy/web/e2e/: agents.spec.ts  cross-doc-drift.spec.ts  drift.spec.ts  onboarding.spec.ts  specs.spec.ts  workflows.spec.ts
_legacy/web/e2e/helpers/: db-helpers.ts  navigation.ts  test-setup.ts
_legacy/web/e2e/mocks/: api-interceptors.ts  llm-responses.ts
_legacy/web/scripts/: setup.sh  start-mnm.sh
_legacy/web/src/: middleware.ts
_legacy/web/src/app/: layout.tsx  page.tsx
_legacy/web/src/app/agents/: page.tsx
_legacy/web/src/app/drift/: page.tsx
_legacy/web/src/contexts/: project-context.tsx
_legacy/web/src/hooks/: use-agent-logs.ts  use-agents.ts  use-cross-doc-drift.ts  use-dashboard.ts  use-discovery.ts  use-drift.ts  use-tasks.ts  use-workflows.ts
poc/: README.md  (+4 more)
(+1366 files in other folders)
