[package]
name = "mnm"
version = "0.1.0"
edition = "2021"
description = "Product/Workflow focused Agentic Development Environment"
license = "MIT"
repository = "https://github.com/pantheon-assistant/mnm"

[dependencies]
# Use GPUI from Zed's git repo for latest fixes
gpui = { git = "https://github.com/zed-industries/zed", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
