[package]
name = "mnm"
version = "0.1.0"
edition = "2021"
description = "Product/Workflow focused Agentic Development Environment"
license = "MIT"
repository = "https://github.com/pantheon-assistant/mnm"

[dependencies]
# GPUI Community Edition + Component Library
gpui = "0.2.2"
gpui-component = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
